--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
+jar {
+    archiveBaseName = 'app'
+    archiveVersion = '0.0.1'
+}
+
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
